--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -13,7 +13,7 @@
             <li role="presentation"><a href="/">Dashboard</a></li>
             <li role="presentation"><a href="/users/login">Login</a></li>
             <li role="presentation"><a href="/users/register">Register</a></li>
-            <li role="presentation"><a href="/users/logout">Register</a></li>
+            <li role="presentation"><a href="/users/logout">Logout</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Login App</h3>
